\name{NEWS}
\title{News for Package \pkg{K2Taxonomer}}
\section{Changes in version 1.0.4 (2021-02-12)}{
    \itemize{
        \item Edits to code according to Bioconductor submission guidelines.
        \item Added runnable examples to all imported functions.
    }
}
\section{Changes in version 1.0.6 (2023-11-14)}{
    \itemize{
        \item Fixed bug in differential analysis wrapper.
    }
}